Fixed a bug with the new UI

--- a/server/src/main/resources/com/cj/scmconduit/server/index.html
+++ b/server/src/main/resources/com/cj/scmconduit/server/index.html
@@ -38,7 +38,7 @@ $(function(){
 			var conduit = this;
 			
 			$("#whatever").append('<div class="conduitbox">' + 
-			'<div class="conduitLabel">cjo ' + 
+			'<div class="conduitLabel">' + conduit.name + 
 			///'<span style="font-size:10pt;font-weight:normal;font-style:italic;">[STATUS:OK]' + 
 			'</div>' + 
 			'<table>' + 
