Made submit.py something that you can download through the UI

--- a/server/src/main/resources/com/cj/scmconduit/server/index.html
+++ b/server/src/main/resources/com/cj/scmconduit/server/index.html
@@ -27,7 +27,7 @@ td.label {
 <div id="header">scm-conduit-server<button style="margin:5px;float:right;clear:both;">Add</button></div>
 
 
-<div id="whatever"/>
+<div id="whatever"></div>
 
 
 <script>
@@ -60,5 +60,6 @@ $(function(){
 	});
 });
 </script>
+<div style="text-align:center;"><a href="/submit.py">submit.py</a></div>
 </body>
 </html>
