Enhanced the UI and fixed a timing bug

--- a/server/src/main/resources/com/cj/scmconduit/server/index.html
+++ b/server/src/main/resources/com/cj/scmconduit/server/index.html
@@ -44,8 +44,8 @@ $(function(){
 			'<table>' + 
 			//'	<tr><td class="label">Type:</td><td>git</td></tr>' + 
 			'	<tr><td class="label">Perforce Path:</td><td>' + conduit.p4path + '</td></tr>' + 
-			//'	<tr><td class="label">API:</td><td>http://build115.wl.cj.com:8034/cjo</td></tr>' + 
-			'	<tr><td class="label">Read-Only:</td><td>' + conduit.url + '</td></tr>' + 
+			'	<tr><td class="label">API:</td><td>' + conduit.apiUrl + '</td></tr>' + 
+			'	<tr><td class="label">Read-Only:</td><td>' + conduit.readOnlyUrl + '</td></tr>' + 
 			//'	<tr><td class="label">Read/Write:</td><td>ssh://build115.wl.cj.com:3433/</td></tr>' + 
 			'</table>' + 
 			'</div>');
