--- a/server/src/main/resources/com/cj/scmconduit/server/index.html
+++ b/server/src/main/resources/com/cj/scmconduit/server/index.html
@@ -54,9 +54,9 @@ $(function(){
 			var logoUrl;
 			
 			if(conduit.type==="GIT"){
-				logoUrl = "http://git-scm.com/images/logos/downloads/Git-Icon-1788C.png";
+				logoUrl = "/Git-Icon-1788C.png";
 			}else if(conduit.type==="BZR"){
-				logoUrl = "http://wiki.bazaar.canonical.com/LogoOptions?action=AttachFile&do=get&target=bzr+icon+64.png";
+				logoUrl = "/bzr-icon-64.png";
 			}else{
 				logoUrl = "";
 			}
@@ -65,6 +65,7 @@ $(function(){
 			'<div class="conduitLabel">' + conduit.name + 
 			'<img width="64" height="64" style="float:left;margin:5px;" src="' + logoUrl + '"/>' + 
 			'<span class="' + classes + '" style="font-size:10pt;font-weight:normal;font-style:italic;"> [STATUS:' + conduit.status + ']' + 
+			' <a href="' + conduit.logUrl + '">LOG</a> ' + 
 			'<button class="deleteButton" id="' + buttonId + '">Delete</button>' + 
 			'</div>' + 
 			'<table>' + 
