--- a/server/src/main/resources/com/cj/scmconduit/server/index.html
+++ b/server/src/main/resources/com/cj/scmconduit/server/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="/jquery-ui/jquery-1.9.1.js"></script>
 <script type="text/javascript" src="/jquery-ui/ui/jquery-ui.js"></script>
 <link rel="stylesheet" href="/jquery-ui/themes/base/jquery-ui.css"/>
 
